@@ -2,7 +2,7 @@
 
 Gem::Specification.new do |s|
   s.name = %q{cucumber}
-  s.version = "0.1.99.6"
+  s.version = "0.1.99.7"
 
   s.required_rubygems_version = Gem::Requirement.new(">= 0") if s.respond_to? :required_rubygems_version=
   s.authors = ["Aslak Helles\303\270y"]
